huggin/huginn-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: huginn
  labels:
    app: huginn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: huginn
  template:
    metadata:
      labels:
        app: huginn
    spec:
      containers:
        - name: huginn
          image: huginn/huginn
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: huginn
